examples/kubernetes/with-zigbee2mqtt/zigbee2mqtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: diyhue
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: zigbee2mqtt
      app.kubernetes.io/name: zigbee2mqtt
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: zigbee2mqtt
        app.kubernetes.io/name: zigbee2mqtt
    spec:
      volumes:
        - name: zigbee2mqtt-settings
          hostPath:
            path: /container_data/zigbee2mqtt
            type: DirectoryOrCreate
        - name: zigbee-adapter
          hostPath:
            path: /dev/ttyAMA1
            type: ''
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:1.25.1
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: zigbee2mqtt-settings
              mountPath: /data
            - name: zigbee-adapter
              mountPath: /dev/ttyAMA1
          livenessProbe:
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
      restartPolicy: Always
