examples/kubernetes/with-zigbee2mqtt/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  namespace: diyhue
spec:
  ports:
    - name: 1883-tcp
      port: 1883
      targetPort: 1883
    - name: 9001-tcp
      port: 9001
      targetPort: 9001
  selector:
    app-name: mosquitto
  type: NodePort
  externalIPs:
    - 192.168.10.124
