examples/kubernetes/with-zigbee2mqtt/zigbee2mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: diyhue
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: zigbee2mqtt
    app.kubernetes.io/name: zigbee2mqtt
  type: ClusterIP
